Primer cambio index.html

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
   </header>
   <section class="hero">
     <h1>José Juan Ramos Cabrera</h1>
+    <h2>Angel >Eduardo Moreno Moreno</h2>
     <p>Sistemas operativos</p>
   </section>
   <footer>
