Segundo Cambio index.html

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   <section class="hero">
     <h1>José Juan Ramos Cabrera</h1>
     <h2>Angel >Eduardo Moreno Moreno</h2>
-    <p>Sistemas operativos</p>
+    <p>Agregando Colaboradores</p>
   </section>
   <footer>
     <h2>CONTACTO</h2>
