Tercer cambio index.html
Se agrego "Equipo"

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
     </nav>
   </header>
   <section class="hero">
+    <p>Equipo:</p>
     <h1>José Juan Ramos Cabrera</h1>
     <h2>Angel >Eduardo Moreno Moreno</h2>
     <p>Agregando Colaboradores</p>
