Cuarto Cambio index.html
se cambio color de fondo

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       margin-top: 10px;
     }
     footer {
-      background-color: #1a1aff;
+      background-color: red;
       color: white;
       text-align: center;
       padding: 20px;
