--- a/index.html
+++ b/index.html
@@ -44,6 +44,16 @@
       font-weight: bold;
       letter-spacing: 2px;
     }
+    .hero h2 {
+      font-size: 48px;
+      font-weight: bold;
+      letter-spacing: 2px;
+    }
+      .hero h3 {
+      font-size: 48px;
+      font-weight: bold;
+      letter-spacing: 2px;
+    }
     .hero p {
       font-size: 20px;
       margin-top: 10px;
@@ -77,7 +87,7 @@
   <section class="hero">
     <p>Equipo:</p>
     <h1>José Juan Ramos Cabrera</h1>
-    <h2>Angel >Eduardo Moreno Moreno</h2>
+    <h2>AngelEduardo Moreno Moreno</h2>
     <p>Agregando Colaboradores</p>
   </section>
   <footer>
