Sexto Cambio index.html
Se agrego nuevo colaborador y derechos reservados

--- a/index.html
+++ b/index.html
@@ -80,19 +80,19 @@
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT9uxyEvreE3lG9-SM4d5M2W6bjZ4rMoBQyRDfHnDIeO4ot9m0gTzqOC-5wPyhnchhGDr0&usqp=CAU" alt="Logo" />
     </div>
     <nav>
-      <a href="#inicio">Inicio</a>
-      <a href="#programa">Quien soy</a>
+      <a href="#inicio">UPChiapas</a>
     </nav>
   </header>
   <section class="hero">
     <p>Equipo:</p>
     <h1>José Juan Ramos Cabrera</h1>
     <h2>AngelEduardo Moreno Moreno</h2>
+    <h3>Ricardo Alfonso Ruiz Sol</h3>
     <p>Agregando Colaboradores</p>
   </section>
   <footer>
-    <h2>CONTACTO</h2>
-    <p>jojuan24@gmail.com</p>
+    <h2>Derechos Reservados</h2
+    <p>UP Chiapas</p>
   </footer>
 </body>
 </html>
